--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "appwrite": "^20.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.6.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
